--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone assignment</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>hello there</p>
+    <header>
+             <nav class="nav-container">
+                <div class="logos">
+                 <img src="images/Frame.png" alt="">
+                 <h3 style="font-size: 35px;"><b><span style="color: #FF42A5;">G</span>amer</b></h3>
+                </div>
+                <div class="menus">
+                   <ul>
+                    <li>About us</li>
+                    <li>Developers</li>
+                    <li>Follow us on</li>
+                   </ul>
+                </div>
+             </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
