--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone assignment</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -17,13 +18,60 @@
                    <ul>
                     <li>About us</li>
                     <li>Developers</li>
-                    <li>Follow us on</li>
+                    <li><button class="btn">Follow us on <span>&nbsp;&nbsp;&nbsp;</span><i class="fa-brands fa-youtube" style="color: #ff0000;"> <span>&nbsp;&nbsp;</span> <i class="fa-brands fa-tiktok" style="color: #000000;"></i></i></button> </li>
                    </ul>
                 </div>
              </nav>
     </header>
     <main>
+            <section class="banner-container">
+                <div class="text-container">
+                   <h2>PLAY LIKE THE </h2>
+                   <h1>G.O.A.T</h1>
+                   <p>1-click instant play</p>
+                   <p>No download</p>
+                   <p>1000s of supported online games</p>
+                   <button class="s-btn">Sign in</button> <button class="g-btn">GO ROGUE</button>
+                </div>
+                <div class="img-container">
+                <img src="images/Group 18.png" alt="">
+                </div>
+            </section>
+          <section class="gamer-container">
+               <div class="gamer-img">
+                <img src="images/pngwing 4.png" alt="">
+               </div>
+               <div class="gamer-text">
+                <h3 class="gamer-header">We are gamer</h3>
+                <p class="gamer-description">An international digital games and entertainment company.We develop, publish and distribute multiplayer mobile games.We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="s-btn">KNOW MORE</button><br><br>
+                <p>Our purpose...</p>
+                <h2>"unleash the gamer in everyone"</h2>
 
+               </div>
+          </section>
+          <section class="funny-container">
+            <h3 class="funny-header">Online Games Funny Videos</h3>
+            <p class="funny-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="funny-img">
+                <div>
+                    <img src="images/Rectangle 4.png" alt=""><br>
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 5.png" alt=""><br>
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 6.png" alt=""><br>
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 7.png" alt=""><br>
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+            </div>
+          </section>
     </main>
     <footer>
 
