add this website

--- a/index.html
+++ b/index.html
@@ -72,6 +72,61 @@
                 </div>
             </div>
           </section>
+          <section class="play-container">
+            <div class="play-text"> 
+                <h3 class="play-header">Play Instantly,</h3>
+                  <h3 class="play-header">No Downloads</h3>
+                  <h3 class="play-header">
+                    No Installs.
+                  </h3>
+                  <p class="play-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="play-img">
+              <div>
+                <img src="images/Rectangle 55.png" alt="" class="play-up-img">
+              </div>
+               <img src="images/Rectangle 66.png" alt="" class="play-down-img">
+            </div>
+          </section>
+          <section class="button-container">
+           <div class="btn-grid">
+            <button class="image-button">
+                <img src="images/Rectangle 11.png" alt="Your Image">
+                Action Games
+              </button>            
+              <button class="image-button">
+                <img src="images/Rectangle 12.png" alt="Your Image">
+                Adventure Games
+              </button>  
+              <button class="image-button">
+                <img src="images/Rectangle 13.png" alt="Your Image">
+                Arcade Games
+              </button>  
+              <button class="image-button">
+                <img src="images/Rectangle 14.png" alt="Your Image">
+                Educational Games
+              </button>  
+              <button class="image-button">
+                <img src="images/Rectangle 15.png" alt="Your Image">
+                Word Games
+              </button>  
+              <button class="image-button">
+                <img src="images/Rectangle 16.png" alt="Your Image">
+                Role Palying Games
+              </button>  
+              <button class="image-button">
+                <img src="images/Rectangle 17.png" alt="Your Image">
+                Music & Audio Games
+              </button>  
+              <button class="image-button">
+                <img src="images/Rectangle 18.png" alt="Your Image">
+                Puzzle Games
+              </button>  
+              <button class="image-button">
+                <img src="images/Rectangle 19.png" alt="Your Image">
+                Strategy Games
+              </button>    
+          </section>
     </main>
     <footer>
 
