--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                </div>
           </section>
           <section class="funny-container">
-            <h3 class="funny-header">Online Games Funny Videos</h3>
+            <h3 class="funny-header">Online Games <span style="color:#FF42A5;">Funny Videos</span></h3>
             <p class="funny-description">A Collection of Hilarious Videos to Brighten Your Day</p>
             <div class="funny-img">
                 <div>
@@ -74,7 +74,7 @@
           </section>
           <section class="play-container">
             <div class="play-text"> 
-                <h3 class="play-header">Play Instantly,</h3>
+                <h3 class="play-header"><span style="color:#FF42A5;">Play Instantly,</span></h3>
                   <h3 class="play-header">No Downloads</h3>
                   <h3 class="play-header">
                     No Installs.
@@ -91,45 +91,69 @@
           <section class="button-container">
            <div class="btn-grid">
             <button class="image-button">
-                <img src="images/Rectangle 11.png" alt="Your Image">
+                <img src="images/Rectangle 11.png" alt="Your Image" width="40px">
                 Action Games
               </button>            
               <button class="image-button">
-                <img src="images/Rectangle 12.png" alt="Your Image">
+                <img src="images/Rectangle 12.png" alt="Your Image" width="40px">
                 Adventure Games
               </button>  
               <button class="image-button">
-                <img src="images/Rectangle 13.png" alt="Your Image">
+                <img src="images/Rectangle 13.png" alt="Your Image" width="40px">
                 Arcade Games
               </button>  
               <button class="image-button">
-                <img src="images/Rectangle 14.png" alt="Your Image">
+                <img src="images/Rectangle 14.png" alt="Your Image" width="40px">
                 Educational Games
               </button>  
               <button class="image-button">
-                <img src="images/Rectangle 15.png" alt="Your Image">
+                <img src="images/Rectangle 15.png" alt="Your Image" width="40px">
                 Word Games
               </button>  
               <button class="image-button">
-                <img src="images/Rectangle 16.png" alt="Your Image">
+                <img src="images/Rectangle 16.png" alt="Your Image" width="40px"> 
                 Role Palying Games
               </button>  
               <button class="image-button">
-                <img src="images/Rectangle 17.png" alt="Your Image">
+                <img src="images/Rectangle 17.png" alt="Your Image" width="40px">
                 Music & Audio Games
               </button>  
               <button class="image-button">
-                <img src="images/Rectangle 18.png" alt="Your Image">
+                <img src="images/Rectangle 18.png" alt="Your Image" width="40px">
                 Puzzle Games
               </button>  
               <button class="image-button">
-                <img src="images/Rectangle 19.png" alt="Your Image">
+                <img src="images/Rectangle 19.png" alt="Your Image" width="40px">
                 Strategy Games
               </button>    
           </section>
     </main>
-    <footer>
-
+    <footer class="last-one">
+        <div class="logo">
+            <img src="images/Frame.png" alt="">
+            <h3 style="font-size: 35px;"><b><span style="color: #FF42A5;">G</span><span style="color: white;">amer</span></b></h3>
+           </div>
+           <ul class="nav">
+            <li>Our Story</li>
+            <li>Games</li>
+            <li>Web Games</li>
+            <li>Careers</li>
+            <li>Support</li>
+            <li>My Account</li>
+           </ul>
+           <ul class="icon">
+            <li><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></li>
+            <li><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></li>
+            <li><i class="fa-brands fa-youtube" style="color: #ff0505;"></i></li>
+            <li><i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i></li>
+           </ul>
+           <ul class="terms">
+            <li>Terms and Conditions</li>
+            <li>Privacy Policy</li>
+            <li>Cookie Policy</li>
+            <li>Privacy Settings</li>
+           </ul>
+           <p class="foot">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
     </footer>
 </body>
 </html>
