--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="/images/Frame.png">
+     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone assignment</title>
     <link rel="stylesheet" href="style.css">
